# HumanBodyFabrikCPP

./: CMakeLists.txt  README.md  compile_commands.json
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-release/src/: cmake_install.cmake  fabrik.lib  fabrikConfig.cmake  fabrikTargets.cmake
build-release/test/: cmake_install.cmake
src/: CMakeLists.txt  Config.cmake.in  constraints.cpp  constraints.h  fabrik.cpp  fabrik.h
src/angle_calculator/: CMakeLists.txt  angle_calculator.cpp
test/: CMakeLists.txt  main.cpp
